@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+6/12/19: Changed some defaults (In 3.7)
+   Stigmator value for astigmatism calibration to 0.04
+   KeepEFTEMState property to 1 (In 3.7).
+   Slower search when CTF fitting on click
+
 6/7/19: Fixed problem with calling script functions when autosave settings is
 turned on (In 3.7).
 
